--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,8 +4,7 @@
     align-items: center;
     position: fixed;
     bottom: 0;
-    width: full;
-    /* height: 20%; */
+    width: 100%;
     background-color: rgb(35, 35, 32);
 }
 
