--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  min-height: 100vh;
+}
+
+html, body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   font-family: "Poppins", sans-serif;
+  background-color: aqua;
 }
