--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@
     align-items: center;
     position: fixed;
     bottom: 0;
+    height: 40px;
     width: 100%;
     background-color: rgb(35, 35, 32);
 }
