created css files for pages and components

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 html, body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  margin: 0 auto;
+  min-height: 100vh;
   font-family: "Poppins", sans-serif;
-  background-color: aqua;
 }
